--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -11,9 +11,7 @@
 <body>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<header id="header">
-	<div th:insert="~{fragments/navbar :: navbar}"></div>
-</header>
+<header id="header" th:insert="~{fragments/navbar :: navbar}"></header>
 
 <div id="main">
 	<div id="content">
