--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,7 +13,7 @@
         <h2 id="title"><a class="nav-link" href="/homepage">Enrollment Web Application</a></h2>
         <a class="nav-link" href="/homepage">Home</a>
         <a class="nav-link" href="/student/courses">My Courses</a>
-        <a class="nav-link" href="">Enrollment</a>
+        <a class="nav-link" href="/student/enrollment">Enrollment</a>
         <span sec:authorize="isAuthenticated()">
             <a class="nav-link" href="/logout">Log Out</a>
         </span>
