--- a/src/main/resources/static/style/coursestyle.css
+++ b/src/main/resources/static/style/coursestyle.css
@@ -24,7 +24,7 @@
     width: fit-content;
     margin: 0 0 20px 0;
     font-size: 16px;
-    color: #0b0c0c;
+    color: var(--dark-text-color);
 }
 
 #student-info-container * {
@@ -74,7 +74,7 @@
     display: flex;
     flex-direction: row;
     background-color: whitesmoke;
-    color: black;
+    color: var(--dark-text-color);
     height: 60px;
     max-height: 60px;
     width: var(--course-card-width);
@@ -85,7 +85,7 @@
 }
 
 .course-icon {
-    color: white;
+    color: var(--light-text-color);
     min-width: 60px;
     max-width: 60px;
     height: 100%;
