After refactoring head elements inside fragment

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<title>Email Confirmation</title>
-	<link rel="icon" href="/images/inter-logo.png">
+	<div th:replace="fragments/head :: head"></div>
+	
+<!--	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
+<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />-->
+<!--	<link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--	<link rel="icon" href="/images/inter-logo.png">-->
 </head>
 
 <body>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
 <header id="header" th:insert="~{fragments/navbar :: navbar}"></header>
 
