--- a/src/main/resources/templates/enrollment.html
+++ b/src/main/resources/templates/enrollment.html
@@ -3,16 +3,18 @@
 	  xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<title>Enroll courses</title>
-	<link rel="icon" href="/images/inter-logo.png">
+	<div th:replace="fragments/head :: head"></div>
+	
+<!--	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
+<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />-->
+<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />-->
+<!--	<link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--	<link rel="icon" href="/images/inter-logo.png">-->
 </head>
 
 <body>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
 <header id="header" th:insert="~{fragments/navbar :: navbar}"></header>
 
