--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,8 +9,7 @@
 <body>
     <nav id="nav-bar" th:fragment="navbar">
         <img th:src="@{/images/inter-logo.png}" alt="Inter Logo" src="">
-<!--        <div id="header-icon" class="material-icons">dataset</div>-->
-        <h2 id="title"><a class="nav-link" href="/homepage">Enrollment Web Application</a></h2>
+        <h1 id="navbar-title"><a class="nav-link" href="/homepage">Inter Bayamón</a></h1>
         <a class="nav-link" href="/homepage">Home</a>
         <a class="nav-link" href="/student/courses">My Courses</a>
         <a class="nav-link" href="/student/enrollment">Enrollment</a>
