--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />
-	<link rel="stylesheet" type="text/css" href="../static/style/formstyle.css" />
 	<title>Reset your password</title>
-	<link rel="icon" href="/images/inter-logo.png">
+	<div th:replace="fragments/head :: head"></div>
+	
+<!--	<meta charset="utf-8">-->
+<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />-->
+<!--	<link rel="stylesheet" type="text/css" href="../static/style/formstyle.css" />-->
+<!--	<link rel="icon" href="/images/inter-logo.png">-->
 </head>
 <body>
 <form class="login-form" method="post" action="">
@@ -69,7 +71,7 @@
 			{
 				const response = await fetch
 				(
-						"http://localhost:8080/auth/resetPassword",
+						"http://localhost:8080/auth/reset-password",
 						{
 							method: "POST",
 							headers: {"Content-Type": "application/json",},
