--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav id="nav-bar" th:fragment="navbar">
-        <img th:src="@{/images/inter-logo.png}" alt="Inter Logo" src="">
+        <img src="/images/inter-logo.png" alt="Inter Logo" >
         <h1 id="navbar-title"><a class="nav-link" href="/homepage">Inter Bayamón</a></h1>
         <a class="nav-link" href="/homepage">Home</a>
         <a class="nav-link" href="/student/courses">My Courses</a>
