--- a/src/main/resources/static/style/coursestyle.css
+++ b/src/main/resources/static/style/coursestyle.css
@@ -13,7 +13,7 @@
     margin: auto;
     padding: 30px;
 
-    background-color: lightgrey;
+    background-color: var(--light-secondary);
 }
 
 #student-info-container {
@@ -58,7 +58,7 @@
     align-content: start;
     margin-left: 20px;
     padding: 20px;
-    background-color: darkgray;
+    background-color: var(--light-tertiary);
 }
 
 #distributive-course-container h2 {
