--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -5,16 +5,9 @@
 <head>
 	<title>Your courses</title>
 	<div th:replace="fragments/head :: head"></div>
-	
-<!--	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
-<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />-->
-<!--	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />-->
-<!--	<link rel="preconnect" href="https://fonts.googleapis.com">-->
-<!--	<link rel="icon" href="/images/inter-logo.png">-->
 </head>
 
 <body>
-<!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
 <header id="header" th:insert="~{fragments/navbar :: navbar}"></header>
 
@@ -63,7 +56,7 @@
 			<h2>Distributive Courses</h2>
 			
 			<p>
-				Some courses require a different amount of credits. Some majors don't require any distributive courses.
+				Some majors require a different amount of distributive credits, and some majors don't require any distributive courses.
 				Your major requires a total of
 				<span style="font-weight: bold" th:text="${student.getMajor().getDistributiveCreditsRequirement()}"></span>
 				distributive requirement credits.
