--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />
+	<script type="text/javascript" th:src="@{/script/script.js}"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="icon" href="/images/inter-logo.png">
