--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,33 +3,25 @@
 <head>
 	<title>Log In</title>
 	<div th:replace="fragments/head :: head"></div>
-	
-<!--    <meta charset="utf-8">-->
-<!--    <link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />-->
-<!--    <link rel="stylesheet" type="text/css" href="../static/style/formstyle.css" />-->
-<!--	<link rel="icon" href="/images/inter-logo.png">-->
 </head>
 <body>
+<img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
+	
+<form class="login-form" method="post" action="/login">
+	<div th:if="${param.error}" class="error-message">Invalid username or password</div>
+	<div th:if="${param.logout}" class="success-message">You have been logged out</div>
 
+	<label for="username" class="sr-only"></label>
+	<input type="text" id="username" name="username" placeholder="Y00123456" required autofocus>
 
-    <form class="login-form" method="post" action="/login">
-        <h2>Log In!</h2>
-		
-		    <div th:if="${param.error}" class="error-message">Invalid username or password</div>
-		    <div th:if="${param.logout}" class="success-message">You have been logged out</div>
-<!--        <div class="alert alert-success" role="alert">You have been logged out</div>-->
+	<label for="password" class="sr-only"></label>
+	<input type="password" id="password" name="password" placeholder="Password" required>
 
-        <label for="username" class="sr-only"></label>
-        <input type="text" id="username" name="username" placeholder="Y00123456" required autofocus>
-
-        <label for="password" class="sr-only"></label>
-        <input type="password" id="password" name="password" placeholder="Password" required>
-
-        <button type="submit">Log In</button>
-        
-        <a href="/auth/register">New? Register here!</a>
-		<br>
-		<a href="/auth/reset-request">Forgot password? Reset here!</a>
-    </form>
+	<button type="submit">Log In</button>
+	
+	<a href="/auth/register">New? Register here!</a>
+	<br>
+	<a href="/auth/reset-request">Forgot password? Reset here!</a>
+</form>
 </body>
 </html>
