Before changing a lot of stuff man i hope i dont fuck up

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -13,8 +13,9 @@
 		<div id="content">
 			<h1>Email Confirmed!</h1>
 			<p>
-				Your email has been confirmed and your account has been enabled. You can now log in!.
+				Your email has been confirmed and your account has been enabled. You can now <a href="/auth/login">log in</a>!
 			</p>
+			
 		</div>
 	</div>
 
