--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,20 +7,19 @@
 <body>
 <img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
 	
-<form class="login-form" method="post" action="/login">
+<form class="my-form" method="post" action="/login">
 	<div th:if="${param.error}" class="error-message">Invalid username or password</div>
 	<div th:if="${param.logout}" class="success-message">You have been logged out</div>
 
-	<label for="username" class="sr-only"></label>
-	<input type="text" id="username" name="username" placeholder="Y00123456" required autofocus>
+	<label for="username">Student Id</label>
+	<input type="text" id="username" name="username" required>
 
-	<label for="password" class="sr-only"></label>
-	<input type="password" id="password" name="password" placeholder="Password" required>
+	<label for="password">Password</label>
+	<input type="password" id="password" name="password" required>
 
 	<button type="submit">Log In</button>
 	
 	<a href="/auth/register">New? Register here!</a>
-	<br>
 	<a href="/auth/reset-request">Forgot password? Reset here!</a>
 </form>
 </body>
