--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -5,7 +5,9 @@
 	<div th:replace="fragments/head :: head"></div>
 </head>
 <body>
-<form class="login-form" method="post" action="">
+<img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
+
+<form class="my-form" method="post" action="">
 	<h2>Reset your password!</h2>
 	
 	<p>
