--- a/src/main/resources/templates/reset-request.html
+++ b/src/main/resources/templates/reset-request.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-<form class="login-form" method="post" action="">
+<img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
+
+<form class="my-form" method="post" action="">
 	<h2>Reset your password!</h2>
 	
 	<p>
