--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -27,12 +27,19 @@ Distributive Courses Background color: #efe3ba
 */
 }
 
-body, header {
-	/*background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/inter-bayamon-background.png");*/
-	/*background-position: center;*/
-	/*background-attachment: fixed;*/
-	/*background-size: cover;*/
+* {
+	margin: 0;
+	padding: 0;
+	color: var(--dark-text-color);
+	font-family: 'Inter', sans-serif;
 }
+
+/*body, header {*/
+/*	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/inter-bayamon-background.png");*/
+/*	background-position: center;*/
+/*	background-attachment: fixed;*/
+/*	background-size: cover;*/
+/*}*/
 
 body {
 	background-color: var(--light-primary);
@@ -42,6 +49,8 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+/*=======NAVBAR==========================================================================================================*/
 
 #header {
 	background-color: var(--light-primary);
@@ -91,6 +100,8 @@ body {
 			background-color: var(--inter-yellow);
 			color: var(--light-text-color);
 		}
+
+/*=======CONTENT==========================================================================================================*/
 
 #main {
 	position: relative;
@@ -201,54 +212,76 @@ body {
 					color: black;
 				}
 
+/*=======MODAL==========================================================================================================*/
 
+#modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+}
 
-	#form {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		margin: 20px auto 20px auto;
-		padding: 10px;
-		width: 95%;
-		max-width: 450px;
-		border-top: 1px solid var(--inter-yellow);
-		border-bottom: 1px solid var(--inter-yellow);
-	}
+#modal-box {
+	background-color: #fefefe;
+	margin: 10% auto auto auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 300px;
+}
 
-		#form label {
-			margin: 5px;
-			font-size: 20px;
-		}
+#modal-title {
+	text-align: center;
+	margin: auto;
+	font-size: 30px;
+}
 
-		#email {
-			margin: 5px;
-      		padding: 5px;
-			outline: none;
-			font-size: 16px;
-			width: 90%;
-			max-width: 300px;
-		}
+#modal-message {
+	margin: 20px 0 20px 0;
+	text-align: justify;
+}
 
-		#submit {
-			background-color: var(--inter-yellow);
-			border: none;
-			margin: 5px;
-			padding: 8px;
-			border-radius: 5px;
-			font-size: 16px;
-			transition: var(--transition-time);
-		}
+#modal-button {
+	background-color: var(--inter-yellow);
+	border: none;
+	font-size: 18px;
+	padding: 12px;
+	color: white;
+	width: 100%;
+	transition: var(--transition-time);
+}
 
-		#submit:hover {
-			background-color: var(--inter-yellow);
-		}
+#modal button:hover {
+	background-color: black;
+	color: white;
+}
 
-	footer {
-		background-color: lightgrey;
-		color: var(--dark-text-color);
-		font-size: 16px;
-		font-weight: bold;
-		margin: 30px 0 0 0;
-		padding: 30px;
-	}
+/*=======FOOTER==========================================================================================================*/
+
+footer {
+	background-color: lightgrey;
+	color: var(--dark-text-color);
+	font-size: 16px;
+	font-weight: bold;
+	margin: 30px 0 0 0;
+	padding: 30px;
+}
+
+/*=======ANIMATIONS==========================================================================================================*/
+
+@keyframes rotate {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+.rotation {
+	animation: rotate 3s linear infinite;
+	position: relative;
+	margin: auto;
+	color: white;
+}
