--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head><title>Head Fragment</title></head>
 <body>
 <div th:fragment="head" th:remove="tag">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" th:href="@{/style/style.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style/coursestyle.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style/formstyle.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/course-style.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style/form-style.css}" />
 	<script type="text/javascript" th:src="@{/script/script.js}"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
