--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -32,7 +32,7 @@
 	<label for="confirmPassword"></label>
 	<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
 	
-	<button type="button" onclick="register()">Register</button>
+	<button id="form-button" type="button" onclick="register()">Register</button>
 	
 	<a href="/auth/login">Registered? Log in here!</a>
 </form>
