--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -20,92 +20,7 @@
 	<label for="confirmPassword"></label>
 	<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
 	
-	<button id="resetButton" type="button" onclick="validateResetForm()">Reset</button>
-	
-	<script>
-		function validateResetForm()
-		{
-			let urlString = window.location.search;
-			let urlParams = new URLSearchParams(urlString);
-			
-			let token = urlParams.get("token");
-			
-			let password = getPassword()
-			if (password.length === 0)
-				return alert("Password needs to be between " + 8 + " and " + 20 + " characters long!");
-			
-			if (!passwordsMatch(password))
-				return alert("Passwords do not match!");
-			
-			resetPassword(token, password).then(r => alert(r))
-		}
-		
-		function getPassword()
-		{
-			let password = document.getElementById("password").value;
-			const PASSWORD_REGEX = /^.{8,20}$/;
-			
-			return matchesRegex(password, PASSWORD_REGEX) ? password : "";
-		}
-		
-		function passwordsMatch(password)
-		{
-			let confirmPassword = document.getElementById("confirmPassword").value;
-			return password === confirmPassword;
-		}
-		
-		async function resetPassword(token, password)
-		{
-			disableButton();
-			
-			let request =
-			{
-				token: token,
-				password: password
-			}
-			
-			try
-			{
-				const response = await fetch
-				(
-						"http://localhost:8080/auth/reset-password",
-						{
-							method: "POST",
-							headers: {"Content-Type": "application/json",},
-							body: JSON.stringify(request),
-						}
-				);
-				
-				let result = await response.json();
-				return result.response;
-			}
-			catch (error)
-			{
-				console.error("Error:", error);
-				enableButton();
-				return "No student found with provided ID!";
-			}
-		}
-		
-		function matchesRegex(string, regex)
-		{
-			return regex.test(string);
-		}
-		
-		function enableButton()
-		{
-			let button = document.getElementById("resetButton");
-			button.disabled = false;
-			button.innerText = "Get password reset email";
-		}
-		
-		function disableButton()
-		{
-			let button = document.getElementById("resetButton");
-			button.disabled = true;
-			button.innerText = "...";
-		}
-	</script>
+	<button id="form-button" type="button" onclick="passwordRequest()">Reset</button>
 </form>
 </body>
 </html>
