--- a/src/main/resources/templates/reset-request.html
+++ b/src/main/resources/templates/reset-request.html
@@ -3,9 +3,19 @@
 <head>
 	<title>Reset your password</title>
 	<div th:replace="fragments/head :: head"></div>
+	<script type="text/javascript" th:src="@{/script/reset-request-script.js}"></script>
 </head>
 
 <body>
+
+<div id="modal">
+	<div id="modal-box">
+		<div id="modal-title"></div>
+		<div id="modal-message"></div>
+		<button id="modal-button">Ok</button>
+	</div>
+</div>
+
 <img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
 
 <form class="my-form" method="post" action="">
@@ -17,69 +27,10 @@
 		a password reset link will be sent to your institutional email.
 	</p>
 	
-	<label for="username"></label>
+	<label for="username">Student Id</label>
 	<input type="text" id="username" name="username" placeholder="Y00123456" required autofocus>
 	
-	<button id="requestButton" type="button" onclick="sendResetRequest()">Get password reset email</button>
-	
-	<script>
-		function getUsername()
-		{
-			let username = document.getElementById("username").value;
-			// const STUDENT_ID_REGEX = /^[a-zA-Z][0-9]{8}$/;
-			const STUDENT_ID_REGEX = /\b(?:[A-Za-z]\d{8}|[A-Za-z]{2}\d{7})\b/;
-			return matchesRegex(username, STUDENT_ID_REGEX) ? username : "";
-		}
-		
-		async function sendResetRequest()
-		{
-			let username = getUsername();
-			if (username.length === 0)
-				return alert("Invalid Student ID format!");
-			
-			try
-			{
-				disableButton();
-				
-				const response = await fetch
-				(
-					"http://localhost:8080/auth/reset-request?username=" + username,
-					{
-						method: "POST",
-						headers: {"Content-Type": "application/json",},
-					}
-				);
-				
-				let result = await response.json();
-				alert(result.response);
-			}
-			catch (error)
-			{
-				console.error("Error:", error);
-				alert("No student found with provided ID!");
-				enableButton();
-			}
-		}
-		
-		function matchesRegex(string, regex)
-		{
-			return regex.test(string);
-		}
-		
-		function enableButton()
-		{
-			let button = document.getElementById("requestButton");
-			button.disabled = false;
-			button.innerText = "Get password reset email";
-		}
-		
-		function disableButton()
-		{
-			let button = document.getElementById("requestButton");
-			button.disabled = true;
-			button.innerText = "wait...";
-		}
-	</script>
+	<button id="form-button" type="button" onclick="resetRequest()">Get password reset email</button>
 </form>
 </body>
 </html>
