Implemented ResponseEntity<ModalResponse> returns on controllers

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -23,13 +23,13 @@
 		your student ID number, a confirmation link will be sent to your institutional email.
 	</p>
 	
-	<label for="username"></label>
+	<label for="username">Student Id</label>
 	<input type="text" id="username" name="username" placeholder="Y00123456" required>
 	
-	<label for="password"></label>
+	<label for="password">Password</label>
 	<input type="password" id="password" name="password" placeholder="Password" required>
 	
-	<label for="confirmPassword"></label>
+	<label for="confirmPassword">Confirm password</label>
 	<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
 	
 	<button id="form-button" type="button" onclick="register()">Register</button>
