--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -3,24 +3,32 @@
 <head>
 	<title>Reset your password</title>
 	<div th:replace="fragments/head :: head"></div>
+	<script type="text/javascript" th:src="@{/script/reset-password-script.js}"></script>
 </head>
 <body>
+
+<div id="modal">
+	<div id="modal-box">
+		<div id="modal-title"></div>
+		<div id="modal-message"></div>
+		<button id="modal-button">Ok</button>
+	</div>
+</div>
+
 <img src="/images/inter-tiger.png" alt="Inter Tiger" id="inter-tiger">
 
 <form class="my-form" method="post" action="">
 	<h2>Reset your password!</h2>
 	
-	<p>
-		Enter your new password.
-	</p>
+	<p>Enter your new password.</p>
 	
-	<label for="password"></label>
+	<label for="password">New Password</label>
 	<input type="password" id="password" name="password" placeholder="Password" required>
 	
-	<label for="confirmPassword"></label>
+	<label for="confirmPassword">Confirm new password</label>
 	<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
 	
-	<button id="form-button" type="button" onclick="passwordRequest()">Reset</button>
+	<button id="form-button" type="button" onclick="resetPassword()">Reset</button>
 </form>
 </body>
 </html>
