--- a/src/main/resources/static/style/form-style.css
+++ b/src/main/resources/static/style/form-style.css
@@ -30,7 +30,7 @@
 }
 
 .my-form label {
-	font-size: 15px;
+	font-size: 12px;
 }
 
 .my-form input {
@@ -58,10 +58,12 @@
 	color: darkgreen;
 	background-color: lightgreen;
 	padding: 10px;
+	margin-bottom: 15px;
 }
 
 .error-message {
 	color: darkred;
 	background-color: lightpink;
 	padding: 10px;
+	margin-bottom: 15px;
 }
