--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,13 +7,13 @@
 	<title>Navigation Bar</title>
 </head>
 <body>
-<div id="footer" th:fragment="footer">
+<footer id="footer" th:fragment="footer">
 	<p>
 		This is not an official service of the Inter-American University of Puerto Rico.
 		The information may not accurately reflect all your approved or remaining classes.
 		Credits earned outside standard courses in campus, such as SAT or CollegeBoard, AP courses and transfers
 		may not be reflected as approved in this page.
 	</p>
-</div>
+</footer>
 </body>
 </html>
